修正Var的分隔bug,完成put语句